Spring Social 微信社交登录（还未测试）

--- a/merryyou-security-browser/src/main/resources/resources/merryyou-signIn.html
+++ b/merryyou-security-browser/src/main/resources/resources/merryyou-signIn.html
@@ -56,6 +56,8 @@
     </table>
 </form>
 <h3>社交登录</h3>
-<a href="/qqLogin/qq"></a>
+<a href="/qqLogin/callback.do"></a>
+<h3>微信登录</h3>
+<a href="/qqLogin/weixin"></a>
 </body>
 </html>
